tests/golden/type_errors/generic_constraint_nonconcrete.cd
fun bad<T: [T]>(value: T): T {
  return value;
}

print bad(1);
