tests/golden/type_errors/generic_constraint_nonconcrete.err
Type error at 1:9: constraint for type parameter `T` must be concrete
  fun bad<T: [T]>(value: T): T {
          ^
